added all AI functionality and endpoints + saveRecipe + getListOfRecipes